--- a/public_html/dzer.html
+++ b/public_html/dzer.html
@@ -17,9 +17,7 @@ function maksa(){
     <input type="radio" id="sula" name="drink" value="2.50">
     <label for="sula">sula</label><br>
     <input type="radio" id="kakao" name="drink" value="3.20">
-    <label for="kakao">kakao</label><br>
-    <input type="radio" id="udens" name="drink" value="1.50">
-    <label for="udens">ūdens</label><br><br>
+    <label for="kakao">kakao</label><br><br>
   <input type="button" id="poga" value="jāmaksā" onclick="maksa()">
 </form> 
 </body>
