--- a/public_html/index.html
+++ b/public_html/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
-            <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ATTĒLI</a>
+            <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ATTĒLU APSTRĀDE</a>
             <a href="#video" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">VIDEO</a>
             <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
         </div>
@@ -75,14 +75,15 @@
                 <p> 
                 </p>
             </div>
+            <div id="INKSCAPE" class="section">
             <li><b>Vektorgrafika</b> - Inkscape</li>
             <img src="images/logo_degreez.png" alt="Trulli" width="250" height="200">
             <h2 id="video" class="section">Video montēšana</h2>
-            <h2>Teksta apstrāde</h2>
+            <h2 id="teksts" class="section">Teksta apstrāde</h2>
+            <p>Apguvām Wordu:</p>
             <img src="images/Word_turisms.png" alt="Trulli" width="250" height="300">
             <img src="images/Word_uzd.png" alt="Trulli" width="250" height="300">
-            <p>Apguvām Wordu:</p>
-            <h2>Izklājlapas</h2>
+            <h2 id="izklajlapas" class="section">Izklājlapas</h2>
 
 
         </div>
