Netbeans stils 1 index

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,27 +10,7 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <style>
-            center {
-                text-align: center;
-            }
-            body {
-                font-family: "Lato", sans-serif
-            }
-            .mySlides {
-                display: none
-            }
-            .main-content {
-                margin-top: 30px;
-                padding: 20px;
-            }
-            .section {
-                padding-top: 30px;
-            }
-            .w3-black{
-                display: flex;
-            }
-        </style>
+        <link rel="stylesheet" href="css/mansStils.css">
     </head>
     <body>
         <div class="w3-top">
@@ -81,8 +61,7 @@
             <h2 id="video" class="section">Video montēšana</h2>
             <h2 id="teksts" class="section">Teksta apstrāde</h2>
             <p>Apguvām Wordu:</p>
-            <img src="images/Word_turisms.png" alt="Trulli" width="250" height="300">
-            <img src="images/Word_uzd.png" alt="Trulli" width="250" height="300">
+            <img src="images/Word_turisms.png" alt="Trulli" width="450" height="500">
             <h2 id="izklajlapas" class="section">Izklājlapas</h2>
 
 
