Netbeans stils 1 index

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -36,6 +36,8 @@
                 </div>
                 <div class="w3-bar-item">
                     <a href="#izklajlapas" class="w3-bar-item w3-button w3-padding-large w3-hide-small">IZKLĀJLAPAS</a>
+                </div>                <div class="w3-bar-item">
+                    <a href="#otrais" class="w3-bar-item w3-button w3-padding-large w3-hide-small">OTRAIS</a>
                 </div>
                 <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
 
@@ -44,7 +46,7 @@
         <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
             <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ATTĒLU APSTRĀDE</a>
             <a href="#video" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">VIDEO</a>
-            <a href="#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">MERCH</a>
+            <a href="#otrais" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">OTRAIS</a>
         </div>
         <div class="w3-container main-content">
             <h1 class="center">Mans datorikas portfolio</h1>
