--- a/public_html/index.html
+++ b/public_html/index.html
@@ -37,7 +37,7 @@
                 <div class="w3-bar-item">
                     <a href="#izklajlapas" class="w3-bar-item w3-button w3-padding-large w3-hide-small">IZKLĀJLAPAS</a>
                 </div>                <div class="w3-bar-item">
-                    <a href="#otrais" class="w3-bar-item w3-button w3-padding-large w3-hide-small">OTRAIS</a>
+                    <a href="otrais.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">OTRAIS</a>
                 </div>
                 <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
 
