--- a/public_html/otrais.html
+++ b/public_html/otrais.html
@@ -5,21 +5,65 @@
         <title>Personas publisko datu saturs un drošība</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/mansStils.css">
     </head>
     <body>
-        <h1>Personas publisko datu saturs un drošība</h1>
+        <div class="w3-top">
+            <div class="w3-black w3-card">
+                <div class="w3-bar-item">
+                    <a class="w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+                </div>
+                <div class="w3-bar-item">
+                    <a href="index.html#" class="w3-button w3-padding-large">SĀKUMS</a>
+                    <div class="w3-dropdown-hover w3-hide-small">
+                        <button class="w3-padding-large w3-button" title="atteli">ATTĒLI <i class="fa fa-caret-down"></i></button>     
+                        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+                            <a href="index.html#GIMP" class="w3-bar-item w3-button">GIMP</a>
+                            <a href="index.html#INKSCAPE" class="w3-bar-item w3-button">INKSCAPE</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="w3-bar-item">
+                    <a href="index.html#teksts" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TEKSTS</a>
+                </div>
+                <div class="w3-bar-item">
+                    <a href="index.html#izklajlapas" class="w3-bar-item w3-button w3-padding-large w3-hide-small">IZKLĀJLAPAS</a>
+                </div>                
+                <div class="w3-bar-item">
+                    <a href="otrais.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">INDIVIDUĀLĀ TĒMA</a>
+                </div>
+                <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
+
+            </div>
+        </div>
+        <div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+            <a href="index.html#" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ATTĒLU APSTRĀDE</a>
+            <a href="index.html#video" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">VIDEO</a>
+            <a href="index.html#otrais" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">INDIVIDUĀLĀ TĒMA</a>
+        </div>
+        <div class="w3-container main-content">
+            <h1 class="center">Individuālais darbs</h1>
+
+        <h2>Personas publisko datu saturs un drošība</h2>
+
         <p>Personas dati var būt:</p>
-    <li>vārds un uzvārds (piem., Jānis Bērziņš);</li>
-    <li>darbavieta (piem., Jānis Bērziņš strādā SIA "X");</li>
-    <li>darbavieta (piem., Jānis Bērziņš strādā SIA "X");</li>
-    <li>ieņemamais amats (piem., SIA "X" direktors);</li>
-    <li>mājas adrese (piem., Jāņa Bērziņa deklarētā dzīvesvietas adrese ir Trotuāra iela 15, Rīga);</li>
-    <li>e-pasta adrese (piem., janis.berzins@siax.lv);</li>
+    <li>vārds un uzvārds ;</li>
+    <li>darbavieta ;</li>
+    <li>darbavieta ;</li>
+    <li>ieņemamais amats ;</li>
+    <li>mājas adrese ;</li>
+    <li>e-pasta adrese ;</li>
     <li>personas kods, personu apliecinošu dokumentu numurs;</li>
-    <li>atrašanās vietas dati (piem., atrašanās vietas datu funkcija mobilajā tālrunī);</li>
+    <li>atrašanās vietas dati;</li>
     <li>interneta protokola (IP) adrese;</li>
     <li>sīkfaila identifikācijas numurs;</li>
     <li>ārstniecības iestādē glabāti dati par pacientu u. tml.</li>
-
+        </div>
 </body>
 </html>
