--- a/public_html/index.html
+++ b/public_html/index.html
@@ -54,17 +54,22 @@
             <p>Attēlu apstrādē mēs apguvām:</p>
             <div id="GIMP" class="section">
                 <li><b>Rakstgrafika</b> - GIMP</li>
+                <img src="images/gimp_img.png">
                 <p> 
                 </p>
             </div>
             <div id="INKSCAPE" class="section">
             <li><b>Vektorgrafika</b> - Inkscape</li>
-            <img src="images/logo_degreez.png" alt="Trulli" width="250" height="200">
+            <img src="images/logo_degreez.png">
             <h2 id="video" class="section">Video montēšana</h2>
+            <video width="640" height="360" controls autoplay loop muted poster="path/to/poster-image.jpg">
+            <source src="images/3D KUBS.mp4" type="video/mp4">
+            </video>
             <h2 id="teksts" class="section">Teksta apstrāde</h2>
             <p>Apguvām Wordu:</p>
-            <img src="images/Word_turisms.png" alt="Trulli" width="450" height="500">
+            <img src="images/Word_turisms.png">
             <h2 id="izklajlapas" class="section">Izklājlapas</h2>
+            <img src="images/excel_img.png">
 
 
         </div>
