--- a/public_html/index.html
+++ b/public_html/index.html
@@ -55,6 +55,7 @@
             <div id="GIMP" class="section">
                 <li><b>Rakstgrafika</b> - GIMP</li>
                 <img src="images/gimp_img.png">
+                <img src="images/gif_download.gif">
                 <p> 
                 </p>
             </div>
