--- a/public_html/otrais.html
+++ b/public_html/otrais.html
@@ -65,5 +65,7 @@
     <li>sīkfaila identifikācijas numurs;</li>
     <li>ārstniecības iestādē glabāti dati par pacientu u. tml.</li>
         </div>
+        <p>Atsauces:</p>
+        <p><a href="https://lvportals.lv/skaidrojumi/294871-kas-ir-personas-dati-vispariga-datu-aizsardzibas-regula-i-2018" target="_blank">lvportals.lv</a></p>
 </body>
 </html>
