izmeginajums commit, jo skola nesavienojas baiti un bildes tapec atseviski tagad comitoju, var apskatities, netbeans, jo so visu es izdariju stunda tikai tagad comitoju

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/mansStils.css">
+        <link rel="stylesheet" href="skola.html">
+        <link rel="stylesheet" href="baiti.html">
     </head>
     <body>
         <div class="w3-top">
@@ -49,6 +51,8 @@
             <a href="#otrais" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">INDIVIDUĀLĀ TĒMA</a>
         </div>
         <div class="w3-container main-content">
+            <a href="skola.html">skola<a/>
+            <a href="baiti.html">baiti</a>
             <h1 class="center">Mans datorikas portfolio</h1>
             <h2>Attēlu apstrāde</h2>
             <p>Attēlu apstrādē mēs apguvām:</p>
@@ -71,6 +75,7 @@
             <img src="images/Word_turisms.png">
             <h2 id="izklajlapas" class="section">Izklājlapas</h2>
             <img src="images/excel_img.png">
+            
 
 
         </div>
