--- a/public_html/index.html
+++ b/public_html/index.html
@@ -59,7 +59,7 @@
             <div id="GIMP" class="section">
                 <li><b>Rakstgrafika</b> - GIMP</li>
                 <img src="images/gimp_img.png">
-                <img src="images/gif_download.gif">
+                <img src="images/musa(1).gif">
                 <p> 
                 </p>
             </div>
