--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Mans portfolio</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="stylesheet" href="css/mansStils.css">
-        <link rel="stylesheet" href="skola.html">
-        <link rel="stylesheet" href="baiti.html">
+
+            <title>Mans portfolio</title>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+                <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+                <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+                <link rel="stylesheet" href="css/mansStils.css">
+                <link rel="stylesheet" href="skola.html">
+                <link rel="stylesheet" href="baiti.html">
+
     </head>
     <body>
+
         <div class="w3-top">
             <div class="w3-black w3-card">
                 <div class="w3-bar-item">
@@ -59,13 +62,17 @@
             <div id="GIMP" class="section">
                 <li><b>Rakstgrafika</b> - GIMP</li>
                 <img src="images/gimp_img.png">
-                <img src="images/musa(1).gif">
+                <img src="images/musa.gif" width="500" height="500">
                 <p> 
                 </p>
             </div>
             <div id="INKSCAPE" class="section">
-            <li><b>Vektorgrafika</b> - Inkscape</li>
-            <img src="images/logo_degreez.png">
+                <li><b>Vektorgrafika</b><p> - Inkscape</P>
+                <p> - 3D modelēšana</P></li>
+            <h3>Inkscape</h3>
+            <img src="images/degreez_logo.png">
+            <h3>3D modelēšana</h3>
+            <img src="images/kubs.png">
             <h2 id="video" class="section">Video montēšana</h2>
             <video width="640" height="360" controls autoplay loop muted poster="path/to/poster-image.jpg">
             <source src="images/3D KUBS.mp4" type="video/mp4">
@@ -79,6 +86,7 @@
 
 
         </div>
+
     </body>
 
 </html>
