--- a/public_html/otrais.html
+++ b/public_html/otrais.html
@@ -30,6 +30,9 @@
                     </div>
                 </div>
                 <div class="w3-bar-item">
+                    <a href="index.html#video" class="w3-bar-item w3-button w3-padding-large w3-hide-small">VIDEO</a>
+                </div>
+                <div class="w3-bar-item">
                     <a href="index.html#teksts" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TEKSTS</a>
                 </div>
                 <div class="w3-bar-item">
@@ -50,22 +53,23 @@
         <div class="w3-container main-content">
             <h1 class="center">Individuālais darbs</h1>
 
-        <h2>Personas publisko datu saturs un drošība</h2>
+            <h2>Personas publisko datu saturs un drošība</h2>
+            <img src="images/personas_dati.png">
 
-        <p>Personas dati var būt:</p>
-    <li>vārds un uzvārds ;</li>
-    <li>darbavieta ;</li>
-    <li>darbavieta ;</li>
-    <li>ieņemamais amats ;</li>
-    <li>mājas adrese ;</li>
-    <li>e-pasta adrese ;</li>
-    <li>personas kods, personu apliecinošu dokumentu numurs;</li>
-    <li>atrašanās vietas dati;</li>
-    <li>interneta protokola (IP) adrese;</li>
-    <li>sīkfaila identifikācijas numurs;</li>
-    <li>ārstniecības iestādē glabāti dati par pacientu u. tml.</li>
+            <h3>Personas dati var būt:</h3>
+            <li>vārds un uzvārds ;</li>
+            <li>darbavieta ;</li>
+            <li>darbavieta ;</li>
+            <li>ieņemamais amats ;</li>
+            <li>mājas adrese ;</li>
+            <li>e-pasta adrese ;</li>
+            <li>personas kods, personu apliecinošu dokumentu numurs;</li>
+            <li>atrašanās vietas dati;</li>
+            <li>interneta protokola (IP) adrese;</li>
+            <li>sīkfaila identifikācijas numurs;</li>
+            <li>ārstniecības iestādē glabāti dati par pacientu u. tml.</li>
+            <h4>Atsauces:</h4>
+            <p><a href="https://lvportals.lv/skaidrojumi/294871-kas-ir-personas-dati-vispariga-datu-aizsardzibas-regula-i-2018" target="_blank">lvportals.lv</a></p>
         </div>
-        <p>Atsauces:</p>
-        <p><a href="https://lvportals.lv/skaidrojumi/294871-kas-ir-personas-dati-vispariga-datu-aizsardzibas-regula-i-2018" target="_blank">lvportals.lv</a></p>
-</body>
+    </body>
 </html>
