--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
     <head>
 
-            <title>Mans portfolio</title>
-                <meta charset="UTF-8">
-                <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-                <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-                <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-                <link rel="stylesheet" href="css/mansStils.css">
-                <link rel="stylesheet" href="skola.html">
-                <link rel="stylesheet" href="baiti.html">
+        <title>Mans portfolio</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/mansStils.css">
+        <link rel="stylesheet" href="skola.html">
+        <link rel="stylesheet" href="baiti.html">
 
     </head>
     <body>
@@ -55,38 +55,41 @@
         </div>
         <div class="w3-container main-content">
             <a href="skola.html">skola<a/>
-            <a href="baiti.html">baiti</a>
-            <h1 class="center">Mans datorikas portfolio</h1>
-            <h2>Attēlu apstrāde</h2>
-            <p>Attēlu apstrādē mēs apguvām:</p>
-            <div id="GIMP" class="section">
-                <li><b>Rakstgrafika</b> - GIMP</li>
-                <img src="images/gimp_img.png">
-                <img src="images/musa.gif" width="500" height="500">
-                <p> 
-                </p>
-            </div>
-            <div id="INKSCAPE" class="section">
-                <li><b>Vektorgrafika</b><p> - Inkscape</P>
-                <p> - 3D modelēšana</P></li>
-            <h3>Inkscape</h3>
-            <img src="images/degreez_logo.png">
-            <h3>3D modelēšana</h3>
-            <img src="images/kubs.png">
-            <h2 id="video" class="section">Video montēšana</h2>
-            <video width="640" height="360" controls autoplay loop muted poster="path/to/poster-image.jpg">
-            <source src="images/3D KUBS.mp4" type="video/mp4">
-            </video>
-            <h2 id="teksts" class="section">Teksta apstrāde</h2>
-            <p>Apguvām Wordu:</p>
-            <img src="images/Word_turisms.png">
-            <h2 id="izklajlapas" class="section">Izklājlapas</h2>
-            <img src="images/excel_img.png">
-            
+                <a href="baiti.html">baiti</a>
+                <h1 class="center">Mans datorikas portfolio</h1>
+                <h2 style="padding-top: 50px">Attēlu apstrāde</h2>
+                <p>Attēlu apstrādē mēs apguvām:</p>
+                <div id="GIMP" class="section" style="padding-top:50px">
+                    <li><b>Rakstgrafika</b> - GIMP</li>
+                    <img src="images/gimp_img.png">
+                    <img src="images/musa.gif" width="500" height="500">
+                    <p> 
+                    </p>
+                </div>
+                <div id="INKSCAPE" class="section" style="padding-top:50px">
+                    <li><b>Vektorgrafika</b><p> - Inkscape</P>
+                        <p> - 3D modelēšana</P></li>
+                    <h3>Inkscape</h3>
+                    <img src="images/degreez_logo.png">
+                    <h3>3D modelēšana</h3>
+                    <img src="images/kubs.png">
+                    <p></p>
+                    <h2 id="video" class="section" style="padding-top: 50px">Video montēšana</h2>
+                    <video width="640" height="360" controls autoplay loop muted poster="path/to/poster-image.jpg">
+                        <source src="images/3D KUBS.mp4" type="video/mp4">
+                    </video>
+                    <br>
+                    <h2 id="teksts" class="section" style="padding-top: 50px">Teksta apstrāde</h2>
+                    <p>Apguvām Wordu:</p>
+                    <img src="images/Word_turisms.png">
+                    <p></p>
+                    <h2 id="izklajlapas" class="section" style="padding-top: 50px">Izklājlapas</h2>
+                    <img src="images/excel_img.png">
 
 
-        </div>
 
-    </body>
+                </div>
 
-</html>
+                </body>
+
+                </html>
