--- a/public_html/otrais.html
+++ b/public_html/otrais.html
@@ -51,7 +51,7 @@
             <a href="index.html#otrais" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">INDIVIDUĀLĀ TĒMA</a>
         </div>
         <div class="w3-container main-content">
-            <h1 class="center">Individuālais darbs</h1>
+            <h1 class="center">Individuālais tēma</h1>
 
             <h2>Personas publisko datu saturs un drošība</h2>
             <img src="images/personas_dati.png">
