--- a/public_html/index.html
+++ b/public_html/index.html
@@ -57,7 +57,7 @@
             <a href="skola.html">skola<a/>
                 <a href="baiti.html">baiti</a>
                 <h1 class="center">Mans datorikas portfolio</h1>
-                <h2 style="padding-top: 50px">Attēlu apstrāde</h2>
+                <h2>Attēlu apstrāde</h2>
                 <p>Attēlu apstrādē mēs apguvām:</p>
                 <div id="GIMP" class="section" style="padding-top:50px">
                     <li><b>Rakstgrafika</b> - GIMP</li>
