--- a/public_html/index.html
+++ b/public_html/index.html
@@ -84,6 +84,7 @@
                     <img src="images/Word_turisms.png">
                     <p></p>
                     <h2 id="izklajlapas" class="section" style="padding-top: 50px">Izklājlapas</h2>
+                    <p>Apguvām Excel:</p>
                     <img src="images/excel_img.png">
 
 
